Remove three from dependencies

--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "url": "https://github.com/will3/brock-engine/issues"
   },
   "homepage": "https://github.com/will3/brock-engine#readme",
-  "dependencies": {
-    "three": "^0.72.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^3.4.0",
-    "sinon": "^1.17.2"
+    "sinon": "^1.17.2",
+    "three": "^0.72.0"
   }
 }
