--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.73.0"
+    "ndarray": "^1.0.18",
+    "three": "^0.73.0",
+    "voxel": "^0.5.0"
   }
 }
