--- a/app/package.json
+++ b/app/package.json
@@ -14,5 +14,9 @@
     "three": "^0.73.0",
     "tic": "^1.0.0",
     "voxel": "^0.5.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-serve": "^0.1.6"
   }
 }
